suggestions from coauthors

--- a/report/pers_schedule/biometrics_submission/bibliography.bib
+++ b/report/pers_schedule/biometrics_submission/bibliography.bib
@@ -270,9 +270,20 @@ title = {Optimal screening schedules for disease progression with application to
 journal = {Biostatistics},
 year = {2017},
 doi = {10.1093/biostatistics/kxx009},
-note={\mbox{doi}:\url{10.1093/biostatistics/kxx009}},
+note={\mbox{doi}:\url{https://doi.org/10.1093/biostatistics/kxx009}},
 URL = { + https://doi.org/10.1093/biostatistics/kxx009},
 publisher={Oxford University Press}
+}
+
+@article{assel2017,
+author = {Assel, Melissa and Dahlin, Anders and Ulmert, David and Bergh, Anders and Stattin, Pär and Lilja, Hans and Vickers, Andrew J.},
+title = {Association Between Lead Time and Prostate Cancer Grade: Evidence of Grade Progression from Long-term Follow-up of Large Population-based Cohorts Not Subject to Prostate-specific Antigen Screening},
+journal = {European Urology},
+year = {2017},
+issn = {0302-2838},
+doi = {10.1016/j.eururo.2017.10.004},
+url = {http://www.sciencedirect.com/science/article/pii/S0302283817308606},
+note= {\mbox{doi}: \url{https://doi.org/10.1016/j.eururo.2017.10.004}}
 }
 
 @article {landmarking2017,
