--- a/report/pers_schedule/biometrics_submission/pers_schedules.tex
+++ b/report/pers_schedule/biometrics_submission/pers_schedules.tex
@@ -86,8 +86,8 @@
 %  the examples below in creating your author and affiliation information.
 %  Also consult a recent issue of the journal for examples of formatting.
 
-\title[Personalized Schedules for Surveillance of Cancer Patients]
-{Personalized Schedules for Surveillance of Cancer Patients}
+\title[Personalized Schedules for Surveillance of Low Risk Prostate Cancer Patients]
+{Personalized Schedules for Surveillance of Low Risk Prostate Cancer Patients}
 
 %  Here are examples of different configurations of author/affiliation
 %  displays.  According to the Biometrics style, in some instances,
@@ -160,11 +160,12 @@
 \author{Anirudh Tomer$^{1,*}$\email{atomer@erasmusmc.nl}, 
 Daan Nieboer$^{2}$, 
 Monique J. Roobol$^3$, \\
-\textbf{Ewout W. Steyerberg}$^{\bmath{2}}$, 
+\textbf{Ewout W. Steyerberg}$^{\bmath{2, 4}}$, 
 \textbf{and Dimitris Rizopoulos}$^{\bmath{1}}$ \\ \\
 $^{1}$Department of Biostatistics, Erasmus University Medical Center, the Netherlands \\
 $^{2}$Department of Public Health, Erasmus University Medical Center, the Netherlands \\
-$^{3}$Department of Urology, Erasmus University Medical Center, the Netherlands}
+$^{3}$Department of Urology, Erasmus University Medical Center, the Netherlands \\
+$^{4}$Department Medical Statistics and Bioinformatics, Leiden University Medical Center, the Netherlands}
 
 
 \begin{document}
@@ -221,7 +222,7 @@ Accepted March} 0000.}
 %
 
 \begin{keywords}
- Active surveillance; Biopsy; Cancer; Joint models; Personalized medicine
+ Active surveillance; Biopsy; Joint models; Personalized medicine; Prostate Cancer
 \end{keywords}
 
 %  As usual, the \maketitle command creates the title and author/affiliations
@@ -274,7 +275,7 @@ Accepted March} 0000.}
 
 \section*{Supplementary Materials}
 
-Web Appendix A, D, E and F referenced in Section~\ref{sec : jm_framework},  Section~\ref{sec : pers_schedule_PRIAS},  and  Section~\ref{sec: discussion}, respectively, and the derivation of Equation (\ref{eq : expected_time_survprob}) and (\ref{eq : var_time_survprob}) in Web Appendix B, are available in the document supplementary\_material.pdf.\vspace*{-8pt}
+Web Appendix A, C, D and E referenced in Section~\ref{sec : jm_framework},  Section~\ref{sec : pers_schedule_PRIAS},  and  Section~\ref{sec: discussion}, respectively, and the derivation of Equation (\ref{eq : expected_time_survprob}) and (\ref{eq : var_time_survprob}) in Web Appendix B, are available in the document supplementary\_material.pdf.\vspace*{-8pt}
 
 %Web Appendix A and C, referenced in Section~\ref{sec : jm_framework} and  Section~\ref{sec : pers_schedule_PRIAS}  respectively, and the derivation of Equations ~\ref{eq : expected_time_survprob} and ~\ref{eq : var_time_survprob} in Web Appendix B, are available with
 %this paper at the Biometrics website on Wiley Online Library.\vspace*{-8pt}
