--- a/report/pers_schedule/biometrics_submission/supplementary.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary.tex
@@ -65,9 +65,9 @@
 \renewcommand{\fnum@figure}{Web Figure \thefigure}
 \makeatother
 
-\AtBeginDocument{%
-  \renewcommand{\thetable}{Web Table \arabic{table}}
-}
+%\AtBeginDocument{%
+%  \renewcommand{\thetable}{Web Table \arabic{table}}
+%}
 
 %Single spacing for tables
 \makeatletter
@@ -254,8 +254,8 @@ Accepted March} 0000.}
 \clearpage
 \input{supplementary/derivation_estimation_mean_var}
 \clearpage
-\input{supplementary/prias_ds}
-\clearpage
+%\input{supplementary/prias_ds}
+%\clearpage
 \input{supplementary/prias_param_estimates}
 \clearpage
 \input{supplementary/demonstration_911_2340}
