--- a/report/pers_schedule/biometrics_submission/supplementary/sim_study_graphs.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/sim_study_graphs.tex
@@ -10,10 +10,10 @@ In the main manuscript, for the personalized schedules based on dynamic risk of 
 \end{align*}
 where $\mbox{TPR}(\cdot)$ and $\mbox{FPR}(\cdot)$ denote time dependent true positive rate (sensitivity) and false positive rate ($1 - \mbox{Specificity}$). The estimation for both is similar to the estimation of $\mbox{AUC}(t, \Delta t, s)$ given by \citet{landmarking2017}. The optimal value of $\kappa$ is $\argmax_{\kappa} \mbox{J}(t, \Delta t, s)$.
 
-The simulation study results for Youden's $\mbox{J}$ were not presented in the main manuscript for brevity and are presented here in \ref{table : sim_study_pooled_estimates_extended}. In addition results for a hybrid approach between median time of GR and dynamic risk of GR based on Youden's $\mbox{J}$ are also presented. 
+The simulation study results for Youden's $\mbox{J}$ were not presented in the main manuscript for brevity and are presented here in Web Table \ref{table : sim_study_pooled_estimates_extended}. In addition results for a hybrid approach between median time of GR and dynamic risk of GR based on Youden's $\mbox{J}$ are also presented. 
 
 \subsection{Results for a fixed $\kappa = 0.95$}
-We have also presented results for a fixed $\kappa$ of 0.95, which means that the next biopsy is scheduled at a time point where risk of GR is 5\%. The results for this approach are presented in \ref{table : sim_study_pooled_estimates_extended}.
+We have also presented results for a fixed $\kappa$ of 0.95, which means that the next biopsy is scheduled at a time point where risk of GR is 5\%. The results for this approach are presented in Web Table \ref{table : sim_study_pooled_estimates_extended}.
 
 \begin{table}[!htb]
 \caption{Estimated mean and standard deviation of the number of biopsies and offset (months). Method names are abbreviated for consistency with Figure \ref{fig : meanNbVsOffset}.}
