--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/loss_functions.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/loss_functions.tex
@@ -31,7 +31,7 @@ The posterior expected loss in (\ref{eq : posterior_absolute_loss}) attains its 
 \end{equation}
 For ease of readability we denote $\pi_j^{-1}(0.5 \mid t,s)$ as $\mbox{median}(T^*_j)$ hereafter.
 
-Even though the mean or median time of GR may be obvious choices from a statistical perspective, from the viewpoint of doctors or patients, it could be more intuitive to make the decision for the next biopsy by placing a cutoff $1 - \kappa, \kappa \epsilon [0,1]$ on the risk of GR. This approach would be successful if $\kappa$ can sufficiently well differentiate between patients who will obtain GR in a given period of time, and those who will not. This approach is also useful when patients are apprehensive about delaying biopsies beyond a certain risk cutoff. In this regard, a biopsy can be scheduled at a time point $u$ such that the dynamic risk of GR is higher than a certain threshold $1 - \kappa,\ $ beyond $u$. To this end, the posterior expected loss for the following multilinear loss function can be minimized to find the optimal $u$:
+Even though the mean or median time of GR may be obvious choices from a statistical perspective, from the viewpoint of doctors or patients, it could be more intuitive to make the decision for the next biopsy by placing a cutoff $1 - \kappa$, where $0 \leq \kappa \leq 1$, on the dynamic incidence/risk of GR. This approach would be successful if $\kappa$ can sufficiently well differentiate between patients who will obtain GR in a given period of time, and those who will not. This approach is also useful when patients are apprehensive about delaying biopsies beyond a certain risk cutoff. Thus, a biopsy can be scheduled at a time point $u$ such that the dynamic risk of GR is higher than a certain threshold $1 - \kappa,\ $ beyond $u$. To this end, the posterior expected loss for the following multilinear loss function can be minimized to find the optimal $u$:
 \begin{equation}
 \label{eq : loss_dynamic_risk}
 L_{k_1, k_2}(T^*_j, u) =
@@ -44,4 +44,4 @@ where $k_1, k_2$ are constants parameterizing the loss function. The posterior e
 
 \subsubsection{A Hybrid Approach}
 \label{subsubsec : mixed_approach}
-In practice, for some patients we may not have sufficient information, resulting in high variance of $g(T_j)$, which in turn would make using a measure of central tendency such as mean or median time of GR unreliable (i.e., overshooting the true $T_j^*$ by a big margin). In such occasions, the approach based on dynamic risk of GR could be more robust. This consideration leads us to a hybrid approach, namely, to select $u$ using dynamic risk of GR based approach when the spread of $g(T_j^*)$ is large, while using $E_g(T^*_j)$ or $\mbox{median}(T^*_j)$ when the spread of $g(T_j^*)$ is small. What constitutes a large spread will be application-specific. In PRIAS, within the first 10 years, the maximum possible delay in detection of GR is three years. Thus we propose that if the difference between the 0.025 quantile of $g(T^*_j)$, and $E_g(T^*_j)$ or $\mbox{median}(T^*_j)$ is more than three years then proposals based on dynamic risk of GR be used instead.
+In practice, for some patients we may not have sufficient information to accurately estimate their PSA profile. The resulting high variance of $g(T^*_j)$ could make using a measure of central tendency such as mean or median time of GR unreliable (i.e., overshooting the true $T_j^*$ by a big margin). In such occasions, the approach based on dynamic risk of GR could be more robust. This consideration leads us to a hybrid approach, namely, to select $u$ using dynamic risk of GR based approach when the spread of $g(T_j^*)$ is large, while using $E_g(T^*_j)$ or $\mbox{median}(T^*_j)$ when the spread of $g(T_j^*)$ is small. What constitutes a large spread will be application-specific. In PRIAS, within the first 10 years, the maximum possible delay in detection of GR is three years. Thus we propose that if the difference between the 0.025 quantile of $g(T^*_j)$, and $E_g(T^*_j)$ or $\mbox{median}(T^*_j)$ is more than three years then proposals based on dynamic risk of GR be used instead.
