--- a/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
@@ -1,11 +1,11 @@
 % !TEX root =  ../pers_schedules.tex 
 \section{Simulation Study}
 \label{sec: simulation_study}
-The application of personalized schedules for patients from PRIAS demonstrated that these schedules adapt according to the historical data of each patient. However we could not perform a full scale comparison between personalized and PRIAS schedules, because the true time of GR was not known for the PRIAS patients. To this end, we conducted a simulation study comparing personalized schedules with PRIAS and annual schedule, whose details are presented next.
+The application of personalized schedules for patients from PRIAS demonstrated that these schedules adapt according to the historical data of each patient. However we could not perform a full scale comparison between personalized and PRIAS schedule, because the true time of GR was not known for the PRIAS patients. To this end, we conducted a simulation study comparing personalized schedules with PRIAS and annual schedule, whose details are presented next.
 
 \subsection{Simulation Setup}
 \label{subsec : simulation_setup}
-First we assume a population of patients enrolled in AS, with the same entrance criteria as that of PRIAS. The PSA and hazard of GR for patients from this population follow a joint model of the form postulated in Section \ref{subsec : jm_fit_prias}, with parameters equal to the posterior mean of parameters estimated from the joint model fitted to PRIAS dataset (Web Appendix D of the supplementary material). We further assume that there are three equal sized subgroups $G_1$, $G_2$ and $G_3$ of patients in the population, differing in the baseline hazard of GR. This was done because we wanted to test the performance of different schedules for a population with a mixture of patients, namely those with faster progressing PCa, as well as those with slowly progressing PCa. For the three subgroups we use a Weibull distributed baseline hazard with the following shape and scale parameters $(k, \lambda$): $(1.5, 4)$, $(3, 5)$ and $(4.5, 6)$ for $G_1, G_2$ and $G_3$, respectively. The effect of these parameters is that the variance of time of GR is highest for $G_1$ and lowest for $G_3$, while the mean GR time is lowest in $G_1$ (faster progressing PCa) and highest in $G_3$ (slowly progressing PCa).
+First we assume a population of patients enrolled in AS, with the same entrance criteria as that of PRIAS. The PSA and hazard of GR for patients from this population follow a joint model of the form postulated in Section \ref{subsec : jm_fit_prias}, with parameters equal to the posterior mean of parameters estimated from the joint model fitted to PRIAS dataset (Web Appendix C of the supplementary material). We further assume that there are three equal sized subgroups $G_1$, $G_2$ and $G_3$ of patients in the population, differing in the baseline hazard of GR. This was done because we wanted to test the performance of different schedules for a population with a mixture of patients, namely those with faster progressing PCa, as well as those with slowly progressing PCa. For the three subgroups we use a Weibull distributed baseline hazard with the following shape and scale parameters $(k, \lambda$): $(1.5, 4)$, $(3, 5)$ and $(4.5, 6)$ for $G_1, G_2$ and $G_3$, respectively. The effect of these parameters is that the mean GR time is lowest in $G_1$ (faster progressing PCa) and highest in $G_3$ (slowly progressing PCa).
 
 From this population we have sampled 500 datasets with 1000 patients each. Patients are randomly assigned to a subgroup. Further, each dataset is split into a training (750 patients) and a test (250 patients) part. The $k$-th simulated training dataset $\mathcal{D}^k$ is given by $\mathcal{D}^k = \{l_{ki}, r_{ki}, \boldsymbol{y}_{ki}; i = 1, \ldots, 750\}$, where $\boldsymbol{y}_{ki}$ denote the PSA measurements for the $i$-th patient in $\mathcal{D}^k$. The frequency of PSA measurements is same as that in PRIAS. Other than simulating a true GR time $T^*_{ki}$, we also generate a random and non-informative censoring time $C_{ki}$. When $T^*_{ki} < C_{ki}$, then $l_{ki} = r_{ki} = T^*_{ki}$, otherwise $l_{ki} = C_{ki}$ and $r_{ki} = \infty$. For the test patients, censoring time is not generated.
 
@@ -19,7 +19,7 @@ To compare the aforementioned schedules we require estimates of the various crit
 where $n_k$ denotes the number of test patients, $\widehat{E(O^S_k)} = {\sum_{l=1}^{n_k}O^S_{kl}}/{n_k}$ is the estimated mean and $\widehat{\mbox{var}(O^S_k)} = {\sum_{l=1}^{n_k}\big\{O^S_{kl} - \widehat{E(O^S_k)}\big\}^2}/(n_k-1)$ is the estimated variance of the offset for the $k$-th simulation. The estimates for number of biopsies are obtained similarly.
 
 \subsection{Results}
-The pooled estimates of the aforementioned criteria are summarized in Table \ref{table : sim_study_pooled_estimates}. In addition, mean offset is plotted against mean number of biopsies conducted to detect GR in Figure \ref{fig : meanNbVsOffset}. From the figure it is evident that across the schedules there is an inverse relationship between $E(N^S_j)$ and $E(O^S_j)$. For example, the annual schedule conducts 5.2 biopsies on average to detect GR, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average to detect GR, the least among all schedules, but it also has the highest average offset of 15 months. The schedule based on median time of GR performs similar to that based on expected time of GR. Since the annual schedule attempts to contain the offset within an year it has the least $\mbox{SD}(O^S_j) = \sqrt{\mbox{var}(O^S_j)}$. However to achieve so, it conducts a wide range of number of biopsies from patient to patient, i.e., highest $\mbox{SD}(N^S_j) = \sqrt{\mbox{var}(N^S_j)}$. Schedules based on expected and median time of GR perform the opposite of annual schedule in terms of $\mbox{SD}(N^S_j)$ and $\mbox{SD}(O^S_j)$.
+The pooled estimates of the aforementioned criteria are summarized in Table \ref{table : sim_study_pooled_estimates}. In addition, mean offset is plotted against mean number of biopsies conducted to detect GR in Figure \ref{fig : meanNbVsOffset}. From the figure it is evident that across the schedules there is an inverse relationship between $E(N^S_j)$ and $E(O^S_j)$. For example, the annual schedule conducts on average 5.2 biopsies to detect GR, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average to detect GR, the least among all schedules, but it also has the highest average offset of 15 months. The schedule based on median time of GR performs similar to that based on expected time of GR. Since the annual schedule attempts to contain the offset within an year it has the least $\mbox{SD}(O^S_j) = \sqrt{\mbox{var}(O^S_j)}$. However to achieve so, it conducts a wide range of number of biopsies from patient to patient, i.e., highest $\mbox{SD}(N^S_j) = \sqrt{\mbox{var}(N^S_j)}$. Schedules based on expected and median time of GR perform the opposite of annual schedule in terms of $\mbox{SD}(N^S_j)$ and $\mbox{SD}(O^S_j)$.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/meanNbVsOffset_all.png}}
@@ -96,4 +96,4 @@ The performance of each schedule differs for the three subgroups $G_1, G_2$ and 
 \label{fig : offsetBoxPlot_all}
 \end{figure}
 
-The choice of a suitable schedule using (\ref{eq : loss_func_sim_study_generic}) depends on the chosen criteria for evaluation of schedules. For example, the schedule based on dynamic risk of GR is suitable if on average the least number of biopsies are to be conducted to detect GR, while simultaneously making sure that at least 90\% of the patients have an average offset less than one year (Figure \ref{fig : nbBoxPlot_all} and \ref{fig : offsetBoxPlot_all}). The schedule based on expected time of GR is suitable if on average the least number of biopsies are to be conducted to detect GR, while simultaneously making sure that at least 80\% of the patients have an average offset less than two years. For at least 90\% of the patients it detects GR within three years, while conducting two biopsies on average. If a stricter cutoff is required on offset the hybrid approach may be suitable, since it conducts only 3.8 biopsies on average while guaranteeing an offset of 24 months for 95\% of the patients and 36 months for 99.9\% of the patients. Besides if further cutoffs are required on variance of number of biopsies or offset they are not too high either for the hybrid approach.
+The choice of a suitable schedule using (\ref{eq : loss_func_sim_study_generic}) depends on the chosen criteria for evaluation of schedules. For example, the schedule based on dynamic risk of GR is suitable if on average the least number of biopsies are to be conducted to detect GR, while simultaneously making sure that at least 90\% of the patients have an average offset less than one year (Figure \ref{fig : nbBoxPlot_all} and \ref{fig : offsetBoxPlot_all}). The schedule based on expected time of GR is suitable if on average the least number of biopsies are to be conducted to detect GR, while simultaneously making sure that at least 90\% of the patients have an average offset less than three years. If a stricter cutoff is required on offset the hybrid approach may be suitable, since it conducts only 3.8 biopsies on average while guaranteeing an offset of two years for 95\% of the patients and three years for 99.9\% of the patients. Besides if further cutoffs are required on variance of number of biopsies or offset they are not too high either for the hybrid approach.
