--- a/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
@@ -23,7 +23,7 @@ The pooled estimates of the aforementioned criteria are summarized in Table \ref
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/meanNbVsOffset_all.png}}
-\caption{Estimated mean number of biopsies and mean offset (months) for the 6 schedules, using all 124781 patients.}
+\caption{Estimated mean number of biopsies and mean offset (months) for the 6 schedules, using all simulated patients.}
 \label{fig : meanNbVsOffset}
 \end{figure}
 
@@ -33,54 +33,54 @@ The pooled estimates of the aforementioned criteria are summarized in Table \ref
 \label{table : sim_study_pooled_estimates}
 \begin{tabular}{lrrrr}
 \Hline
-\multicolumn{5}{c}{a) All subgroups: 124781 patients}\\
+\multicolumn{5}{c}{a) All subgroups}\\
 \hline
-Schedule          & $E(N^S_j)$ & $E(O^S_j)$ & ${\mbox{SD}[N^S_j]}$ & ${\mbox{SD}[O^S_j]}$ \\
+Schedule          & $E(N^S_j)$ & $E(O^S_j)$ & ${\mbox{SD}(N^S_j)}$ & ${\mbox{SD}(O^S_j)}$ \\
 \hline
 Annual         & 5.24            & 6.01                & 2.53          & 3.46              \\
 PRIAS          & 4.90            & 7.71                & 2.36          & 6.31\\
-Exp. GR time & 1.92            & 15.08               & 1.19          & 12.11             \\
-Med. GR time & 2.06            & 13.88               & 1.41          & 11.80              \\
 Dyn. risk GR       & 4.69            & 6.66                & 2.19           & 4.38              \\
 Hybrid       & 3.75            & 9.70                & 1.71          & 7.25              \\
+Med. GR time & 2.06            & 13.88               & 1.41          & 11.80              \\
+Exp. GR time & 1.92            & 15.08               & 1.19          & 12.11             \\
 \hline
-\multicolumn{5}{c}{b) Subgroup $G_1$: 41484 patients}\\
+\multicolumn{5}{c}{b) Subgroup $G_1$}\\
 \hline
-Schedule        & $E(N^S_j)$ & $E(O^S_j)$ & ${\mbox{SD}[N^S_j]}$ & ${\mbox{SD}[O^S_j]}$ \\
+Schedule        & $E(N^S_j)$ & $E(O^S_j)$ & ${\mbox{SD}(N^S_j)}$ & ${\mbox{SD}(O^S_j)}$ \\
 \hline
 Annual         & 4.32            & 6.02                & 3.13          & 3.44              \\
 PRIAS          & 4.07            & 7.44                & 2.88          & 6.11    \\
-Exp. GR time & 1.72            & 21.65               & 1.47          & 14.75             \\
-Med. GR time & 1.84            & 20.66               & 1.76          & 14.62             \\
 Dyn. risk GR       & 3.85            & 6.75                & 2.69          & 4.44              \\
 Hybrid       & 3.25            & 10.25               & 2.16          & 8.07              \\
+Med. GR time & 1.84            & 20.66               & 1.76          & 14.62             \\
+Exp. GR time & 1.72            & 21.65               & 1.47          & 14.75             \\
 \hline      
-\multicolumn{5}{c}{c) Subgroup $G_2$: 41423 patients}\\
+\multicolumn{5}{c}{c) Subgroup $G_2$}\\
 \hline
-Schedule        & $E(N^S_j)$ & $E(O^S_j)$ & ${\mbox{SD}[N^S_j]}$ & ${\mbox{SD}[O^S_j]}$ \\
+Schedule        & $E(N^S_j)$ & $E(O^S_j)$ & ${\mbox{SD}(N^S_j)}$ & ${\mbox{SD}(O^S_j)}$ \\
 \hline
 Annual         & 5.18            & 5.98                & 2.13          & 3.47              \\
 PRIAS          & 4.85            & 7.70                & 2.00          & 6.29        \\
-Exp. GR time & 1.77            & 13.54               & 0.98          & 9.83              \\
-Med. GR time & 1.89             & 12.33               & 1.16          & 9.44              \\
 Dyn. risk GR       & 4.63            & 6.66                & 1.82          & 4.37              \\
 Hybrid       & 3.68            & 10.32                & 1.37          & 7.45              \\
+Med. GR time & 1.89             & 12.33               & 1.16          & 9.44              \\
+Exp. GR time & 1.77            & 13.54               & 0.98          & 9.83              \\
 \hline      
-\multicolumn{5}{c}{d) Subgroup $G_3$: 41874 patients}\\
+\multicolumn{5}{c}{d) Subgroup $G_3$}\\
 \hline
-Schedule        & $E(N^S_j)$ & $E(O^S_j)$ & ${\mbox{SD}[N^S_j]}$ & ${\mbox{SD}[O^S_j]}$ \\
+Schedule        & $E(N^S_j)$ & $E(O^S_j)$ & ${\mbox{SD}(N^S_j)}$ & ${\mbox{SD}(O^S_j)}$ \\
 \hline
 Annual         & 6.20             & 6.02                & 1.76          & 3.46              \\
 PRIAS          & 5.76             & 7.98                & 1.71         & 6.51        \\
-Exp. GR time & 2.27            & 10.09               & 0.99          & 7.47              \\
-Med. GR time & 2.45            & 8.70                & 1.15          & 6.32              \\
 Dyn. risk GR       & 5.58            & 6.58                & 1.56          & 4.33              \\
 Hybrid       & 4.32            & 8.55                & 1.26          & 5.91              \\
+Med. GR time & 2.45            & 8.70                & 1.15          & 6.32              \\
+Exp. GR time & 2.27            & 10.09               & 0.99          & 7.47              \\
 \hline     
 \end{tabular}
 \end{table}
 
-The PRIAS schedule conducts only 0.3 biopsies less than the annual schedule, but with a higher variance of offset, it does not guarantee early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedule, we can see that the latter performs better than PRIAS schedule in all four criteria. The hybrid approach combines the benefits of methods with low $E(N^S_j)$ and $\mbox{SD}(N^S_j)$, and methods with low $E(O^S_j)$ and $\mbox{SD}(O^S_j)$. It conducts 1.5 less biopsies than the annual schedule on average and with a $E(O^S_j)$ of 9.7 months it detects GR within an year since its occurrence. Moreover, it has both $\mbox{SD}(N^S_j)$ and $\mbox{SD}(O^S_j)$ comparable to PRIAS.
+The PRIAS schedule conducts only 0.3 biopsies less than the annual schedule, but with a higher variance of offset, it does not guarantee early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedule, we can see that the latter performs slightly better than PRIAS schedule in all four criteria. The hybrid approach combines the benefits of methods with low $E(N^S_j)$ and $\mbox{SD}(N^S_j)$, and methods with low $E(O^S_j)$ and $\mbox{SD}(O^S_j)$. It conducts 1.5 biopsies less than the annual schedule on average and with a $E(O^S_j)$ of 9.7 months it detects GR within an year since its occurrence. Moreover, it has both $\mbox{SD}(N^S_j)$ and $\mbox{SD}(O^S_j)$ comparable to PRIAS.
 
 The performance of each schedule differs for the three subgroups $G_1, G_2$ and $G_3$. The annual schedule remains the most consistent across subgroups in terms of the offset, but it conducts 2 extra biopsies for subgroup $G_3$ (slowly progressing PCa) than $G_1$ (faster progressing PCa). The performance of schedule based on expected time of GR is the most consistent in terms of number of biopsies but it detects GR an year later on average in subgroup $G_1$ than $G_3$. For the dynamic risk of GR based schedule and the hybrid schedule the dynamics are similar to that of the annual schedule. Unlike the latter two schedules, the PRIAS schedule not only conducts more biopsies in $G_3$ than $G_1$ but also detects GR later in $G_3$ than $G_1$.
 
@@ -92,7 +92,7 @@ The performance of each schedule differs for the three subgroups $G_1, G_2$ and 
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/offsetBoxPlot_all.png}}
-\caption{Boxplot showing variation in biopsy offset (months) for different methods, using all simulated patients. X-axis is trimmed at 70 months for visual clarity.}
+\caption{Boxplot showing variation in biopsy offset (months) for different methods, using all simulated patients.}
 \label{fig : offsetBoxPlot_all}
 \end{figure}
 
