--- a/report/pers_schedule/biometrics_submission/pers_schedules.tex
+++ b/report/pers_schedule/biometrics_submission/pers_schedules.tex
@@ -15,8 +15,8 @@
 %  as are almost all equations in the journal.  Use a recent version of the
 %  journal as a guide. 
 %  
-%\documentclass[useAMS,usenatbib, referee]{biom}
-\documentclass[useAMS, usenatbib]{biom}
+\documentclass[useAMS,usenatbib, referee]{biom}
+%\documentclass[useAMS, usenatbib]{biom}
 %
 %  If your system does not have the AMS fonts version 2.0 installed, then
 %  remove the useAMS option.
@@ -165,7 +165,7 @@ Monique J. Roobol$^3$, \\
 $^{1}$Department of Biostatistics, Erasmus University Medical Center, the Netherlands \\
 $^{2}$Department of Public Health, Erasmus University Medical Center, the Netherlands \\
 $^{3}$Department of Urology, Erasmus University Medical Center, the Netherlands \\
-$^{4}$Department Medical Statistics and Bioinformatics, Leiden University Medical Center, the Netherlands}
+$^{4}$Department of Medical Statistics and Bioinformatics, Leiden University Medical Center, the Netherlands}
 
 
 \begin{document}
@@ -222,7 +222,7 @@ Accepted March} 0000.}
 %
 
 \begin{keywords}
- Active surveillance; Biopsy; Joint models; Personalized medicine; Prostate Cancer
+ Active surveillance; Biopsy; Joint models; Personalized medicine; Prostate cancer
 \end{keywords}
 
 %  As usual, the \maketitle command creates the title and author/affiliations
