--- a/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
+++ b/report/pers_schedule/biometrics_submission/supplementary/prias_param_estimates.tex
@@ -1,8 +1,8 @@
 % !TEX root =  ../supplementary.tex
 
-\section{Parameter estimates for PRIAS dataset}
+\section{Parameter Estimates for the PRIAS dataset}
 \label{sec : param_estimates_jm_fit_prias}
-The posterior parameter estimates for the joint model we fitted to the PRIAS dataset are shown in Web Table \ref{tab : PSA_long} (longitudinal sub-model) and Web Table \ref{tab : PSA_survival} (relative risk sub-model), and parameter estimates for the variance-covariance matrix from the longitudinal sub-model are the following:
+The posterior parameter estimates for the joint model we fitted to the PRIAS dataset are shown in \ref{tab : PSA_long} (longitudinal sub-model) and \ref{tab : PSA_survival} (relative risk sub-model), and parameter estimates for the variance-covariance matrix from the longitudinal sub-model are the following:
 \begin{equation*}
 \bmath{D} = \begin{bmatrix}
        0.409 & 0.105 & -0.140 \\[0.3em]
