--- a/report/pers_schedule/biometrics_submission/mainmatter/choosing_schedule.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/choosing_schedule.tex
@@ -1,13 +1,12 @@
 % !TEX root =  ../pers_schedules.tex
 
-\section{Choosing a Schedule}
+\section{Evaluation of Schedules}
 \label{sec : choosing_schedule}
 Given a particular schedule $S$ of biopsies, our next goal is to evaluate the schedule and to compare it with other schedules. To this end, we first present the methods to evaluate the biopsy schedules and then discuss the choice of a schedule.
 
-\subsection{Evaluation of Schedules}
 We evaluate a schedule $S$ using two criteria, namely the number of biopsies $N^S_j \geq 1$ a schedule conducts for the $j$-th patient to detect GR, and the offset $O^S_j \geq 0$ by which it overshoots the true GR time $T^*_j$. The offset $O^S_j$ is defined as $O^S_j = T^S_{j{N^S_j}} - T^*_j$, where $T^S_{j{N^S_j}} \geq T^*_j$ is the time at which GR is detected. Our interest lies in the joint distribution $p(N^S_j, O^S_j)$ of the number of biopsies and the offset. Given the medical burden of biopsies, ideally only one biopsy with zero offset should be conducted. Hence, realistically we should select a schedule with a low mean number of biopsies $E(N^S_j)$ as well a low mean offset $E(O^S_j)$. It is also desired that a schedule has low variance of the number of biopsies $\mbox{var}(N^S_j)$, as well as low variance of the offset $\mbox{var}(O^S_j)$, so that the schedule works similarly for most patients. Quantiles of $p(N^S_j)$ may also be of interest. For example, it may be desired that a schedule detects GR with at most two biopsies in 95\% of the patients.
 
-\subsection{Finding a Suitable Schedule}
+\subsection{Choosing a Schedule}
 Given the multiple criteria for evaluation of a schedule, the next step is to use them to select a schedule. Using principles from compound optimal designs \citep{lauter1976optimal} we propose to choose a schedule $S$ which minimizes a loss function of the following form:
 \begin{equation}
 \label{eq : loss_func_sim_study_generic}
