--- a/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/introduction.tex
@@ -1,11 +1,11 @@
 % !TEX root =  ../pers_schedules.tex 
 \section{Introduction}
 \label{sec : introduction}
-Cancer screening is a widely used practice to detect cancer before symptoms appear in otherwise healthy individuals. A major issue of screening programs that has been observed in many types of cancers is overdiagnosis \citep{esserman2014addressing}. To avoid subsequent overtreatment, patients diagnosed with low grade cancers are commonly advised to join active surveillance (AS) programs. The goal of AS is to routinely examine if the cancer progressed and avoid or delay serious treatments such as surgery, chemotherapy, or radiotherapy. To this end, AS includes, but is not limited to periodical evaluation of biomarkers pertaining to the cancer, physical examination, medical imaging, and biopsy.
+Cancer screening is a widely used practice to detect cancer before symptoms appear in otherwise healthy individuals. A major issue of screening programs that has been observed in many types of cancers is overdiagnosis \citep{esserman2014addressing}. To avoid subsequent overtreatment, patients diagnosed with low grade cancers are commonly advised to join active surveillance (AS) programs. The goal of AS is to routinely examine the progression of cancer and avoid serious treatments such as surgery, chemotherapy, or radiotherapy as long as they are not needed. To this end, AS includes, but is not limited to periodical evaluation of biomarkers pertaining to the cancer, physical examination, medical imaging, and biopsy.
 
 In this paper we focus on AS programs for prostate cancer (PCa), wherein the decision to exit AS and start active treatment (e.g., operation, chemotherapy) is typically based on invasive examinations, such as biopsies \citep{bokhorst2016decade}. Biopsies can be reliable, but they are also painful, and have an associated risk of complications such as urinary retention, hematuria and sepsis \citep{loeb2013systematic}. Because of this reason the schedule of  biopsies has significant medical consequences for patients. A frequent schedule of biopsies may help detecting PCa progression earlier but the corresponding risk of complications will be high. Although such a schedule may work well for patients with faster progressing cancer, for slowly progressing PCa patients many unnecessary biopsies may be scheduled. Furthermore, patients do not always comply with such a schedule, as has been observed by \citet{bokhorst2015compliance}. In the specific case of the world's largest AS program, Prostate Cancer Research International Active Surveillance (PRIAS) \citep{bokhorst2016decade}, the compliance rate for biopsies steadily decreased from 81\% at year one of follow up, to 60\% at year four, 53\% at year seven and 33\% at year ten. Such non-compliance can lead to delayed detection of PCa progression, which may reduce the effectiveness of AS programs.
 
-This paper is motivated by the need to reduce the medical burden of repeat biopsies while simultaneously avoiding late detection of PCa progression. For the latter purpose, several AS programs employ a fixed annual schedule (biopsies with a gap of one year) of biopsies \citep{tosoian2011active,welty2015extended}. However, given the medical burden of biopsies, most AS programs also strongly advise against scheduling biopsies more frequently than the annual schedule. The PRIAS schedule for biopsies is relatively lenient: one biopsy each is scheduled at year one of follow up, year four, year seven, year ten, and every five years thereafter. However, PRIAS switches to the annual schedule if a patient's prostate-specific antigen (PSA) doubling time, also known as PSA-DT and measured as the inverse of the slope of the regression line through the base two logarithm of PSA values, is less than 10 years. We intend to improve upon such fixed schedules by creating personalized schedules for biopsies. That is, a different schedule for every patient utilizing their periodically measured serum prostate-specific antigen (PSA) levels (measured in ng/mL) and repeat biopsy results. Biopsies are graded using the Gleason score, which takes an integer value between 6 and 10, with 10 corresponding to the most serious state of the cancer. Patients enter AS only if their Gleason score is 6. When a patient's Gleason score becomes greater than 6, also known as Gleason reclassification (referred to as GR hereafter), he is often advised to switch from AS to active treatment. Hence, for AS programs it is of prime interest to detect GR soonest with least number of biopsies possible.
+This paper is motivated by the need to reduce the medical burden of repeat biopsies while simultaneously avoiding late detection of PCa progression. For the latter purpose, several AS programs employ a fixed annual schedule (biopsies with a gap of one year) of biopsies \citep{tosoian2011active,welty2015extended}. However, given the medical burden of biopsies, most AS programs also strongly advise against scheduling biopsies more frequently than the annual schedule. The PRIAS schedule for biopsies is relatively lenient: one biopsy each is scheduled at year one of follow up, year four, year seven, year ten, and every five years thereafter. However, PRIAS also switches to the annual schedule if a patient's prostate-specific antigen (PSA) doubling time, also known as PSA-DT and measured as the inverse of the slope of the regression line through the base two logarithm of PSA values, is less than 10 years. We intend to improve upon such fixed schedules by creating personalized schedules for biopsies. That is, a different schedule for every patient utilizing their periodically measured serum PSA levels (measured in ng/mL) and repeat biopsy results. Biopsies are graded using the Gleason score, which takes an integer value between 6 and 10, with 10 corresponding to the most serious state of the cancer. Patients enter AS only if their Gleason score is 6. When the Gleason score becomes greater than 6, also known as Gleason reclassification (referred to as GR hereafter), patients are often advised to switch from AS to active treatment. Hence, for AS programs it is of prime interest to detect GR soonest with least number of biopsies possible.
 
 Personalized schedules for screening have received much interest in the literature, especially in the medical decision making context. For diabetic retinopathy, cost optimized personalized schedules based on Markov models have been developed by \citet{bebu2017OptimalScreening}. For breast cancer, personalized mammography screening policy based on the prior screening history and personal risk characteristics of women, using partially observable Markov decision process (MDP) models have been proposed by \citet*{ayer2012or}. MDP models have also been used to develop personalized screening policies for cervical cancer \citep*{akhavan2017markov} and colorectal cancer \citep*{erenay2014optimizing}. Another type of model called joint model for time to event and longitudinal data \citep{tsiatis2004joint,rizopoulos2012joint} has also been used to create personalized schedules, albeit for the measurement of longitudinal biomarkers \citep{drizopoulosPersScreening}. In context of PCa, \citet{zhang2012optimization} have used partially observable MDP models to personalize the decision of (not) deferring a biopsy to the next checkup time during the screening process. The decision is based on the baseline characteristics as well as a discretized PSA level of the patient at the current check up time.
 
