--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/estimation.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/estimation.tex
@@ -17,10 +17,10 @@ Since a closed form solution is not available for the variance expression, it is
 
 For schedules based on dynamic risk of GR, the value of $\kappa$ dictates the biopsy schedule and thus its choice has important consequences. Often it may be chosen on the basis of the amount of risk that is acceptable to the patient. For example, if the maximum acceptable risk is 5\%, then $\kappa = 0.95$.
 
-In cases where $\kappa$ cannot be chosen on the basis of the input of the patients, we propose to automate the choice of $\kappa$. More specifically, we propose to choose a threshold $\kappa$ for which a binary classification accuracy measure \citep{lopez2014optimalcutpoints}, discriminating between cases and controls, is maximized. In PRIAS, cases are patients who experience GR and the rest are controls. However, a patient can be in control group at some time $t$ and in the cases at some future time point $t + \Delta t$, and thus time dependent binary classification is more relevant. In joint models, a patient $j$ is predicted to be a case if $\pi_j(t + \Delta t \mid t,s) \leq \kappa$ and a control if $\pi_j(t + \Delta t \mid t,s) > \kappa$ \citep*{rizopoulosJMbayes, landmarking2017}. In this work we chose the time window $\Delta t$ to be one year. This because, in AS programs at any point in time, it is of interest to identify patients who may obtain GR in the next one year from those who do not, so that they can be provided immediate attention (in exceptional cases a biopsy within an year of the last one). As for the choice of the binary classification accuracy measure, we require a measure which is in line with the goal to focus on patients whose true time of GR falls in the time window $\Delta t$. To this end, a measure which combines both sensitivity and precision is the $\mbox{F}_1$ score. It is defined as:
+In cases where $\kappa$ cannot be chosen on the basis of the input of the patients, we propose to automate the choice of $\kappa$. More specifically, we propose to choose a threshold $\kappa$ for which a binary classification accuracy measure \citep{lopez2014optimalcutpoints}, discriminating between cases and controls, is maximized. In PRIAS, cases are patients who experience GR and the rest are controls. However, a patient can be in control group at some time $t$ and in the cases at some future time point $t + \Delta t$, and thus time dependent binary classification is more relevant. In joint models, a patient $j$ is predicted to be a case if $\pi_j(t + \Delta t \mid t,s) \leq \kappa$ and a control if $\pi_j(t + \Delta t \mid t,s) > \kappa$ \citep*{rizopoulosJMbayes, landmarking2017}. In this work we choose the time window $\Delta t$ to be one year. This because, in AS programs at any point in time, it is of interest to identify patients who may obtain GR in the next one year from those who do not, so that they can be provided immediate attention (in exceptional cases a biopsy within an year of the last one). As for the choice of the binary classification accuracy measure, we require a measure which is in line with the goal to focus on patients whose true time of GR falls in the time window $\Delta t$. To this end, a measure which combines both sensitivity and precision is the $\mbox{F}_1$ score. It is defined as:
 \begin{align*}
 \mbox{F}_1(t, \Delta t, s) &= 2\frac{\mbox{TPR}(t, \Delta t, s)\ \mbox{PPV}(t, \Delta t, s)}{\mbox{TPR}(t, \Delta t, s) + \mbox{PPV}(t, \Delta t, s)},\\
-\mbox{TPR}(t, \Delta t, s) &= \mbox{Pr}\big\{\pi_j(t + \Delta t \mid t,s) \leq \kappa \mid T^*_j \epsilon (t, t + \Delta t]\big\},\\
-\mbox{PPV}(t, \Delta t, s) &= \mbox{Pr}\big\{T^*_j \epsilon (t, t + \Delta t] \mid \pi_j(t + \Delta t \mid t,s) \leq \kappa \big\}.
+\mbox{TPR}(t, \Delta t, s) &= \mbox{Pr}\big\{\pi_j(t + \Delta t \mid t,s) \leq \kappa \mid t < T^*_i \leq t + \Delta t\big\},\\
+\mbox{PPV}(t, \Delta t, s) &= \mbox{Pr}\big\{t < T^*_i \leq t + \Delta t \mid \pi_j(t + \Delta t \mid t,s) \leq \kappa \big\}.
 \end{align*}
 where $\mbox{TPR}(\cdot)$ and $\mbox{PPV}(\cdot)$ denote time dependent true positive rate (sensitivity) and positive predictive value (precision), respectively. The estimation for both is similar to the estimation of $\mbox{AUC}(t, \Delta t, s)$ given by \citet{landmarking2017}. Since a high $\mbox{F}_1$ score is desired, the optimal value of $\kappa$ is $\argmax_{\kappa} \mbox{F}_1(t, \Delta t, s)$. In this work we compute the latter using a grid search approach. That is, first $\mbox{F}_1$ is computed using the available dataset over a fine grid of $\kappa$ values in the interval $[0,1]$, and then $\kappa$ corresponding to the highest $\mbox{F}_1$ is chosen. Furthermore, in this paper we use $\kappa$ chosen only on the basis of $\mbox{F}_1$ score.
